recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:0: error: illegal cyclic inheritance involving trait Iterable
class SquareKoch extends Turtle {
                 ^